<resources>
    <string name="app_name">Boilerplate</string>
    <string name="available">Available</string>
    <string name="images">Images</string>
    <string name="audios">Audios</string>
    <string name="videos">Videos</string>
    <string name="apps">Apps</string>
    <string name="contacts">Contacts</string>
    <string name="documents">Documents</string>
    <string name="upload">Upload</string>
    <string name="no_permissions">No permission</string>
    <string name="grant_permission">Grant permission</string>
    <string name="grant_contact_permission">Please allow contact permission from application settings</string>
    <string name="phone">Phone</string>
    <string name="storage">Storage</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="login_success">Sign in successful</string>
    <string name="firebase_auth_success">Firebase authentication successful</string>
    <string name="firebase_auth_failed">Authentication Failed :" %1$s</string>
    <string name="fail_to_login">Login Failed</string>
    <string name="select_atleast_one_file">Select at least one file</string>
    <string name="storage_permission_description">We need storage permission to show all of your data</string>
    <string name="core_fundamentals">Core fundamental are based on these permissions</string>
    <string name="ok">OK</string>
    <string name="delete">Delete</string>
    <string name="download">Download</string>
    <string name="downloading">Downloading</string>
    <string name="downloadingtitle">Downloading :</string>
    <string name="cancel">Cancel</string>
    <string name="need_permissions">Need Permission</string>
    <string name="proceed">Proceed</string>
    <string name="necessary_permissions">You need to allow necessary permissions in Settings manually</string>
    <string name="all_permissions_granted">All permissions are granted</string>
    <string name="welcome_to">Welcome to</string>
    <string name="phone_storage">Phone Storage</string>
    <string name="cloud_storage">Boilerplate</string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string name="privacy_policy_simple">Privacy Policy</string>
    <string name="lets_start">Let\'s Start</string>
    <string name="agree_and_continue">Agree &amp; Continue</string>
    <string name="login_with_gmail">Login With Gmail</string>
    <string name="splash_description">Best ever boilerplate platform where you can\nmanage your all business and individual data.</string>
    <string name="privacy_dialog_description">This app, allows you to backup Photos, Videos, Contacts and other data on your phone to our secure servers. Your email / phone is kept on our servers securely for registration and to identify you and help you to restore data from the cloud.</string>
    <string name="privacy_dialog_condition">If you agree to our <font fgcolor='#00A3FF'><u>Privacy Policy</u></font> for Data handling press &quot;Agree &amp; Continue&quot;</string>
    <string name="total">Total</string>
    <string name="used">Used</string>
    <string name="Upload_dialog_fragment">UploadDialogFragment</string>
    <string name="download_dialog_fragment">DownloadDialogFragment</string>
    <string name="delete_dialog_fragment">DeleteDialogFragment</string>
    <string name="uploading_media">Uploading Media</string>
    <string name="downloading_media">Downloading Media</string>
    <string name="total_items">Total Items :</string>
    <string name="uploaded">Uploaded :</string>
    <string name="uploading">Uploading :</string>
    <string name="uploaded_successfully">Uploaded Successfully</string>
    <string name="deleted_successfully">Deleted Successfully</string>
    <string name="deleting">Deleting</string>
    <string name="downloaded_successfully">Downloaded Successfully</string>
    <string name="done">Done</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="light_mode">Light Mode</string>
    <string name="profile">Profile</string>
    <string name="download_path">Download Path</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="profile_info">Profile Info</string>
    <string name="no_data_found">No Data Found</string>
    <string name="package_">package</string>
    <string name="choose_image_first">Choose image first</string>
    <string name="profile_updated">Profile updated</string>
    <string name="update">Update</string>
    <string name="missing_fields">Enter your name</string>

    <string name="premium_subscription">Premium Subscription</string>
    <string name="premium">Premium</string>
    <string name="classic">Classic</string>
    <string name="basic">Basic</string>
    <string name="get_15_gb">Get 15 GB Storage</string>
    <string name="get_25_gb">Get 25 GB Storage</string>
    <string name="free_5_gb">Free 5 GB</string>
    <string name="features">Features</string>
    <string name="unlock_basic_version">Unlock basic version</string>
    <string name="ads_free_access">Ads free access</string>
    <string name="backup_and_restore">Basic and Restore Media\nContent Storage</string>
    <string name="backup_and_restore_desc">boilerplate provides fast, low-cost, highly durable storage for backup and restore. Cloud service infrastructure is secured and user data is protected.</string>
    <string name="ad_free_mode">Ad Free Mode</string>
    <string name="ad_free_mode_desc">Say goodbye to add pop-ups that interfere with you while uploading and downloading data to cloud and using app.</string>
    <string name="continue_with">Continue with %1$s</string>
    <string name="privacy_policy_link">https://sites.google.com/view/cloudstoragemycloud-privacy/home</string>

    <string name="attention">Attention</string>
    <string name="are_you_sure_delete">Are you sure you want to delete?</string>
    <string name="are_you_sure_logout">Are you sure you want to logout?</string>
    <string name="are_you_sure_exit">Are you sure you want to exit?</string>
    <string name="exit">Exit</string>
    <string name="permission_required">Permission Required</string>
    <string name="all_files_access_required">All Files Access Required</string>
    <string name="all_files_access_required_desc">This app required All Files permission to access documents in this phone. We will securely backup your document(s) on cloud. Please allow the permission on next screen to continue.</string>
    <string name="please_allow_cloud_storage">Please allow boilerplate to access storage / contacts on your device.</string>
    <string name="open_settings">1. Open Settings</string>
    <string name="tap_permissions">2. Tap Permissions</string>
    <string name="turn_on_storage">3. Turn On Storage / Contacts</string>
    <string name="open_settings_title">Open Settings</string>
    <string name="choose_from_gallery">Choose image from Gallery</string>
    <string name="take_new_photo">Take a new photo</string>
    <string name="no_internet">No internet connection</string>

    <!--  Permissions  -->
    <string name="contact_permission">Contact Permission</string>
    <string name="storage_permission">Storage Permission</string>
    <string name="permission_detail">This app requires storage and contacts permissions to access media and contacts in this phone. We will securely backup your data on cloud. Please allow the permission on next dialog to continue.</string>
    <string name="camera_permission">Camera Permission</string>
    <string name="camera_permission_detail">This app requires camera permissions to capture image.</string>
    <string name="permission_detail_title">Permissions Detail</string>
    <string name="connection_failed">Connection Failed</string>
    <string name="connection_failed_detail">Please check your internet connection</string>
    <string name="try_again">Try Again</string>
    <string name="choose_file_again">Choose file again</string>

    <string name="you_cant_select_more">You can not select any more media</string>
    <string name="gb">GB</string>
    <string name="space_not_allowed">Starting space is not allowed</string>
</resources>