<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <TextView
                android:id="@+id/tv_permission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/uploading_media"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/maincolor"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lav_progress"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:scaleType="centerCrop"
                android:background="@android:color/transparent"
                android:backgroundTint="@android:color/transparent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_permission"
                app:layout_constraintVertical_chainStyle="packed"
                app:lottie_autoPlay="true"
                app:lottie_fileName="uploadanimation_day.json"
                app:lottie_loop="true" />

            <TextView
                android:id="@+id/tv_total_files"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-1"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/maincolor"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@id/lav_progress"
                app:layout_constraintStart_toStartOf="@id/lav_progress"
                app:layout_constraintTop_toBottomOf="@id/lav_progress" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ly_upload_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_total_files">

                <TextView
                    android:id="@+id/tv_uploaded_files_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/uploading"
                    android:fontFamily="@font/roboto_regular"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tv_uploaded_files"
                    android:textColor="@color/text_green"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/tv_uploaded_successfully"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/uploaded_successfully"
                    android:fontFamily="@font/roboto_regular"
                    app:layout_constraintTop_toTopOf="parent"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/tv_uploaded_files"
                    android:textColor="@color/maincolor"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/tv_uploaded_files"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:fontFamily="@font/roboto_regular"
                    android:layout_marginStart="5dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_uploaded_files_title"
                    android:textColor="@color/text_green"
                    android:textSize="16sp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/common_text_color"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/lav_progress"
                app:layout_constraintEnd_toEndOf="@id/lav_progress"
                app:layout_constraintStart_toStartOf="@id/lav_progress"
                app:layout_constraintTop_toTopOf="@id/lav_progress" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_done"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_blue_rounded_bg"
                android:text="@string/done"
                android:textSize="16sp"
                android:fontFamily="@font/roboto_regular"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:visibility="gone"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="@+id/ly_upload_status"
                app:layout_constraintEnd_toEndOf="@+id/ly_upload_status"
                app:layout_constraintTop_toBottomOf="@+id/ly_upload_status"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>